# shark

./: Cargo.toml  README.md  install.sh
benches/: bench.sh
latex/: cli-diagram.tex
src/: lib.rs  machine.rs  main.rs  plugboard.rs  reflector.rs  rotor.rs
