[package]
name = "enigma-shark"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8"
clap = { version = "4.4.6", features = ["derive"]}
serde = { version = "1.0", features = ["derive"] }
atty = "0.2.14"
serde_json = "1.0"

[[bin]]
name = "enigma"
path = "src/main.rs"
